@@ -1,4 +1,5 @@
 0.08
+ - Add script_js() and script_js_src() methods.
  - Set preserved for style element in Tags default.
 
 0.07 2022-09-12T18:53:17+02:00
